src/objects/Duplicate_Asset__c.object
<CustomObject>
    <description>Custom Object used as a holding place for the processing of Asset/Support Entitlement data coming from Navision to Salesforce to create Asset Records.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Array_Cache__c</fullName>
        <description>Array Cache</description>
        <label>Array Cache</label>
        <picklist>
            <picklistValues>
                <fullName>320F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>640F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3200F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3200FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6400F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6400FS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Array_Capacity__c</fullName>
        <description>Array Capacity</description>
        <label>Array Capacity</label>
        <picklist>
            <picklistValues>
                <fullName>12T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Array_Controller__c</fullName>
        <description>Array Controller</description>
        <label>Array Controller</label>
        <picklist>
            <picklistValues>
                <fullName>CS215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS700</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Array_Networking__c</fullName>
        <description>Array Networking</description>
        <label>Array Networking</label>
        <picklist>
            <picklistValues>
                <fullName>2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P4F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2T4F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4T2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4P2F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Currency__c</fullName>
        <label>Asset Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dup_Asset_Trigger_Error__c</fullName>
        <label>Dup Asset Trigger Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Install_City__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_City__c, Sales_Order__r.Ship_To_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Country__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_Country__c, Sales_Order__r.Ship_To_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_State_Province__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_State__c, Sales_Order__r.Ship_to_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Street1__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_Address_1__c, Sales_Order__r.Ship_To_Address_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Street2__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_Address_2__c, Sales_Order__r.Ship_To_Address_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Street2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Zip_Code__c</fullName>
        <formula>IF(TSC_Asset_Support__c = TRUE, Sales_Order__r.End_Customer_Zip_Postal_Code__c, Sales_Order__r.Ship_To_Zip_Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Eval Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>IF(ISPICKVAL( Order_Type__c , &apos;Eval Unit&apos; ) , NULL, Sales_Order__r.Approved_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium 4 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium 4 Hour Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC: Premium Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC: Premium 4 Hour Onsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales Order Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Duplicate Assets</relationshipLabel>
        <relationshipName>Duplicate_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf_Pack_1__c</fullName>
        <description>Shelf Pack 1</description>
        <label>Shelf Pack 1</label>
        <picklist>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shelf_Pack_2__c</fullName>
        <description>Shelf Pack 2</description>
        <label>Shelf Pack 2</label>
        <picklist>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shelf_Pack_3__c</fullName>
        <description>Shelf Pack 3</description>
        <label>Shelf Pack 3</label>
        <picklist>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Decommissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_End_Date__c</fullName>
        <label>Support End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TSC_Asset_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if asset is supported by TSC.</description>
        <label>TSC Asset Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assetNrdEndDate__c</fullName>
        <label>NRD End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assetNrdStartDate__c</fullName>
        <label>NRD Start Date</label>
        <type>Date</type>
    </fields>
    <label>Duplicate Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Name__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Sales_Order_Line__c</columns>
        <columns>Matched_Asset__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unprocessed_Assets</fullName>
        <columns>NAME</columns>
        <columns>Asset_Name__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Sales_Order_Line__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLA__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Support_Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Support_End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unprocessed Assets</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Duplicate Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>